# coding

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
OCR/: requirements.txt
OCR/m_ddddocr/: ddddocr_test.py
OCR/m_ppocr/: ppocr3_class.py  ppocr3_test.py
PyQt6/demo_pyqtgraph/: main.py  requirements.txt
PyQt6/demo_pyqtgraph/ui/: main.ui  main_old.ui  res.py  ui_main.py
PyQt6/show_img_scale/: main.py
PyQt6/show_img_scale/ui/: home.ui  ui_home.py
PyQt6/using_tools_show/: main.py
PyQt6/using_tools_show/src/: openvino_test.py  yolov8.py
PyQt6/using_tools_show/ui/: home.ui  mres.qrc  ui_home.py
Qt/qt5/chapter01/demo01/: widget.cpp  widget.h  widget.ui
Qt/qt5/chapter01/demo02/: CMakeLists.txt  main.cpp  mainwindow.ui
Qt/qt6/chapter01/demo01/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.ui  resources.qrc  windownew.cpp  windownew.h
Qt/qt6/chapter01/demo02/: demo02.pro  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/qt6/chapter01/demo03/: CMakeLists.txt  main.cpp
Qt/qt6/chapter01/myQt/: CMakeLists.txt  imgprocess.cpp  imgprocess.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
arithmetic/py/: 1_dichotomy.py
cpp/ch01/: demoClass.cpp  test.cpp  testdemo.cpp  testdemo.h
cpp/ch02/: demo_vector.cpp
cpp/leetcode/: twoNumberAdd.cpp
demo/: CMakeLists.txt  README.md  main.cpp
docs/: API_REFERENCE.md
examples/: CMakeLists.txt  main.cc
flask/: create_folder.py
flask/chapter01/: s1.py  s1_improve.py
flask/chapter01/templates/: edit.html  index.html  login.html
flask/chapter02/: app.py
flask/chapter02/demo/: __init__.py
flask/chapter02/demo/views/: jolly.py  lussy.py
flask/chapter03/: app.py
flask/chapter03/app/: __init__.py
flask/chapter03/app/templates/: edit.html  error.html  home.html  index.html  login.html
flask/chapter03/app/views/: jolly.py
flask/chapter04/: app.py
flask/chapter04/app/: __init__.py  yolov5_onnx.py
flask/chapter04/app/templates/: error.html  form.html  index.html  lg.html  login.html  root.html  upload.html
flask/chapter04/app/views/: jolly.py
flask/chapter05/: run.py
flask/chapter05/app/: __init__.py
flask/chapter05/app/data/: coco.names  config.py  demo.py
flask/chapter05/app/static/: style.css
flask/chapter05/app/templates/: 404.html  base.html  home.html  index.html  root.html  start.html  test copy.html  test.html  test1.html
flask/chapter05/app/views/: jolly.py
include/: yolo.hpp  yolo_interface.h
include/backend/: ibackend.hpp
include/detail/: detector_impl.hpp
include/yolo/export/: yolo_exports.h
llm/qwen/: test_qwen2.py
ml/bnn/: test_bnn_pytorch.py
ml/bp/: numpy_bp.py  pytorch_bp.py
ml/lightgbm/: test_boston.py
ml/m_scikit-learn/: KMeans.py  LinearRegression.py  pca.py  svm.py
nlp/Emotion/: Emotion_model.py
nlp/base/: senta_base.py  textblob_test.py
numpy_pyplot/chapter01/: demo01.py
office/: first_pptx.py
opencv/ch03/: imagepre.py
opencv/chapter01/: homography.py
opencv/create_img_correction/: image_rectification.py
opencv/img_base/: image_format_conver.py  open_show_img.py
opencv/ocr_get_image_time/: get_image_time.py
opencv/vs2019/base/setcode/: main.cpp  setcode.sln
plt/chapter01/: plt_fig_axex_base.py  scatter_plot_and.py
plt/chapter02/: test.py
pyqt5/: requirements.txt
pyqt5/chapter01/: imgshow.py  imgshow.ui  showimage.py  test_pyqt.py
pyqt5/chapter02/: get_weather.py  test.py  weather.py  weather.ui
pyqt5/chapter03/: signal_and_solt.py  signal_and_solt_02.py
pyqt5/chapter04/: example02.py  mainwindow_demo.py  musicPlayer.py  nuikta_packet.bat
pyqt5/chapter05/: main.py
pyqt5/chapter05/ui/: demo.py  demo.ui  mode.py  mode.ui
pyqt5/chapter06/: autorestart.py  login_GUI.py
pyqt5/control_widget/: label_demo.py
pyqt5/music_play_demo/: example01.py
pyqt5/pyqt5_yolov5_detect/: main.py  requirements.txt  test.py
pyqt5/pyqt5_yolov5_detect/data/: hrs.names  hrs.yaml  pigeon.names  soil.yaml
pyqt5/pyqt5_yolov5_detect/ui/: detect_GUI.py  detect_GUI.ui  login_GUI.py  login_GUI.ui
pyqt5/pyqt5_yolov5_detect/utils/: operation_xml.py  yolov5_onnx.py
pyqt5/win_file_renames/: rename.py  rename.ui  rename_files_GUI.py
python/: requirements.txt
python/ML/: GMM_from_EM.py
python/asyncio_await_socket/: asyncio_clients.py  asyncio_demo.py  sequential_server.py
python/chapter01/: check_nuitka.py  get_weather.py
python/chapter02/: argparse_use_demo.py  myttf.py  random_demo.py  try_except_demo.py
python/datasets_operation/: augmentor_demo.py
python/datastructure/: quick_sort_demo.py  single_ListNode.py
python/date_time/: get_local_date_time.py
python/improve_skills/: fillter_value.py
python/paper/: augment_datasets.py  cnn.py  dataset_op.py  graducation_result.py  read_xml_draw_txt_2_img.py
python/paper/classes/: pigeon_classes.txt
python/paper/data/Annotations/: bus.xml  zidane.xml
python/regular_expression/: demo01.py
src/: yolo_factory.cc
src/backend/: cpu_backend.cc  opencv_backend.cc  openvino_backend.cc
tests/: CMakeLists.txt  test_main.cc  yolo_test.cpp  yolo_test.hpp
vision/deploy/ort_cpp/ort_ch01/: CMakeLists.txt
vision/deploy/ort_cpp/ort_ch01/include/: main.h  yolov5.h
vision/deploy/ort_cpp/ort_ch01/py_src/: infer_vino.py  onnx_simply.py  v5_detect_cv.py
vision/deploy/ort_cpp/ort_ch01/src/: main.cpp  yolov5.cpp
vision/model/: v8pose_json_to_txt.py  yolo_data_process.py
vision/model/data_process/: v8pose_json_to_txt.py  yolo_data_process.py
vision/model/data_process/yolo_pose/: keypoint_coco_json_convert_yolo_txt.py  make_compare_data_hh.py  split_keypoint_datasets.py  (+1 more)
vision/model/yolo/: yolov8pose_ocr_detect.py
vision/mtorch/module/: m_create_lenet.py  m_create_yolo_module.py  m_dataset_loader.py  m_define_ops.py  test_xinguan.py
vision/mtorch/quantization/: base_quantization.py  demo_torch.py
vision/onnx/: fp32_2_fp16_onnxmltools.py  fuse_conv_bn.py
web/gradio/: first_demo.py
web/streamlit/: demo.py  demo_base.py  demo_data_element.py  demo_session_state.py
(+9 files in other folders)
